add alipay red packet ad

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe" title="全民云计算 爆款云服务器低至 2 折，1 核 1G ¥ 293元/年" onclick="trackOutboundLink('https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe', 'AD-Aliyun-cloud-host-2', 'click');"
                 target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb2m2t9jqj308w0bvt93.jpg" style="height: 209px; width: 130px;">
@@ -252,9 +252,9 @@
                 <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
             </a>
         </div>
-        <div class="ad-float-right hide">
-            <a href="#" title="支付宝扫码领红包，天天可领，想花就花" onclick="trackOutboundLink('Alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
-                <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fls1eov2jej303m0480ta.jpg">
+        <div class="ad-float-right">
+            <a href="#" title="马老师发红包了，打开支付宝首页搜索“510669218” 立即领红包！天天可领，想花就花！" onclick="trackOutboundLink('alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
+                <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fxtxyxsjasj30fr0no762.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
         <div class="ad-float-right hide">
