hide amazon blackfive ad info

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <div class="container body-container">
             <div class="row">
                 <div>
-                    <p>
+                    <p class="hide">
                         <a href="http://t.cn/E25gpMj" title="亚马逊冬之读宴精选好书满 200 元减 50元" onclick="trackOutboundLink('http://t.cn/E25gpMj', 'AD-AMZ-Books-200-50', 'click');" target="_blank">
                             <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb57sm7y0j315o08cmyt.jpg">
                         </a>
