add android studio 3.4 canary 6/7 and 3.3 rc2 links

--- a/index.html
+++ b/index.html
@@ -426,6 +426,111 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 RC 2 -->
+                            <tr>
+                                <td rowspan="5">3.3 RC 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.18/android-studio-ide-182.5160847-windows.zip">android-studio-ide-182.5160847-windows.zip</a>
+                                </td>
+                                <td>1053081208 bytes</td>
+                                <td>2677d7dbc9a2371047b680442d2b379a37225cb9b3c4db126647cffe90c4b19d</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fy3t4uybi2j31em0jmtdv.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.18/android-studio-ide-182.5160847-windows32.zip">android-studio-ide-182.5160847-windows32.zip</a>
+                                </td>
+                                <td>1052554005 bytes</td>
+                                <td>bd1f2dc7552ad1daf922e0a4cb96e14e364886f03602ab4fb56b315aa0ad8f09</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.18/android-studio-ide-182.5160847-mac.zip">android-studio-ide-182.5160847-mac.dmg</a>
+                                </td>
+                                <td>1044330848 bytes</td>
+                                <td>17441bc684455e3ff27965bf901af229a09ff8ba0a18ba60888aa793f8c1dd4c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.18/android-studio-ide-182.5160847-linux.zip">android-studio-ide-182.5160847-linux.zip</a>
+                                </td>
+                                <td>1059145453 bytes</td>
+                                <td>257a69d69843232643c970afed4b1c137a4b9335bf4405c1059d0378d9e63217</td>
+                            </tr>
+                            <!-- 3.4 Canary 7 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.6/android-studio-ide-183.5159543-windows.zip">android-studio-ide-183.5159543-windows.zip</a>
+                                </td>
+                                <td>1141412141 bytes</td>
+                                <td>6baa75982b658e3944a3a106e2d7a29457be9c931f8291a7439316721f6931e9</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fy3stecwokj31g80nan3o.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.6/android-studio-ide-183.5159543-windows32.zip">android-studio-ide-183.5159543-windows32.zip</a>
+                                </td>
+                                <td>1140884938 bytes</td>
+                                <td>e72a944c0802c0b373d2428adf83e30dfe14d9b2a11fbc4000a577ebe15980ae</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.6/android-studio-ide-183.5159543-mac.zip">android-studio-ide-183.5159543-mac.dmg</a>
+                                </td>
+                                <td>1070513930 bytes</td>
+                                <td>5aa1d0b9307fb2c592aec35a077ebca8ac4594904cca24bd11685f38e325acc7</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.6/android-studio-ide-183.5159543-linux.zip">android-studio-ide-183.5159543-linux.zip</a>
+                                </td>
+                                <td>1084450138 bytes</td>
+                                <td>a82076615a441e7a4d1f0d3a37043a35f185f43c303f89dae23070d2312ec864</td>
+                            </tr>
+                            <!-- 3.4 Canary 6 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.5/android-studio-ide-183.5146016-windows.zip">android-studio-ide-183.5146016-windows.zip</a>
+                                </td>
+                                <td>1141391035 bytes</td>
+                                <td>9b924ee68ff33420779199f050a92e263dc6247f98dc32d6b957fb7506ff0d04</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNbRwly1fy3skseo1vj31eo0kajwn.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.5/android-studio-ide-183.5146016-windows32.zip">android-studio-ide-183.5146016-windows32.zip</a>
+                                </td>
+                                <td>1140863832 bytes</td>
+                                <td>2c1c876a152e96391fbddf00befaaed67410dee68fa366c0189c8f958dc9be0e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.5/android-studio-ide-183.5146016-mac.zip">android-studio-ide-183.5146016-mac.dmg</a>
+                                </td>
+                                <td>1070493266 bytes</td>
+                                <td>838548a4d21dd023d8ef68304efd49556fb0243e45139dbcfd443619c793422a</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.5/android-studio-ide-183.5146016-linux.zip">android-studio-ide-183.5146016-linux.zip</a>
+                                </td>
+                                <td>1084429030 bytes</td>
+                                <td>415b7d752e79232be87ed2b9d1f111631b7859c48ab0d3688c25707d6bd44afc</td>
+                            </tr>
                             <!-- 3.3 RC 1 -->
                             <tr>
                                 <td rowspan="5">3.3 RC 1</td>
