add android studio 3.4 canary 8/9 and 3.3 rc3 linsk

--- a/index.html
+++ b/index.html
@@ -426,6 +426,111 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 RC 3 -->
+                            <tr>
+                                <td rowspan="5">3.3 RC 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.19/android-studio-ide-182.5183351-windows.zip">android-studio-ide-182.5183351-windows.zip</a>
+                                </td>
+                                <td>1053088610 bytes</td>
+                                <td>cd929804e7067716bed98deb8d2a24b818452ed094423c5ff1eb87bb9f311827</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNbRwly1fygtsajo2kj31ia0k40y2.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.19/android-studio-ide-182.5183351-windows32.zip">android-studio-ide-182.5183351-windows32.zip</a>
+                                </td>
+                                <td>1052561407 bytes</td>
+                                <td>1480448e00f891e406043549cb7af09c96b915e830765c725cf71d9be0379b47</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.19/android-studio-ide-182.5183351-mac.zip">android-studio-ide-182.5183351-mac.dmg</a>
+                                </td>
+                                <td>1044338137 bytes</td>
+                                <td>4cbf97be24f49bdb1e3f9bed41c5c7e55bc3356b639ef9a0bb67aa09c07017aa</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.19/android-studio-ide-182.5183351-linux.zip">android-studio-ide-182.5183351-linux.zip</a>
+                                </td>
+                                <td>1059152759 bytes</td>
+                                <td>1e62d69c5e9e97c9ff04af5c0edabf9d95126b155ceb8f1a9398b028fb2414e7</td>
+                            </tr>
+                            <!-- 3.4 Canary 9 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.8/android-studio-ide-183.5186062-windows.zip">android-studio-ide-183.5186062-windows.zip</a>
+                                </td>
+                                <td>1143370753 bytes</td>
+                                <td>7441047f394edf5687ff91745562e26094dcf2f2823fb03fc99edf691dfbbcea</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fygth16biuj31ge0k0q89.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.8/android-studio-ide-183.5186062-windows32.zip">android-studio-ide-183.5186062-windows32.zip</a>
+                                </td>
+                                <td>1142843550 bytes</td>
+                                <td>064af006d1c6f4e319ac427572d012329686a0fb35c0a67bdcc5b7eb7e4bb274</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.8/android-studio-ide-183.5186062-mac.zip">android-studio-ide-183.5186062-mac.dmg</a>
+                                </td>
+                                <td>1072446204 bytes</td>
+                                <td>7f351f8b97ac9b36f6fd47f1d23f723dcf327a0a39bffb269d84f049717e5a5e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.8/android-studio-ide-183.5186062-linux.zip">android-studio-ide-183.5186062-linux.zip</a>
+                                </td>
+                                <td>1086408790 bytes</td>
+                                <td>e9275584dcfc1b28b4723c42732f2f85be338e5196e040601a60c88f81f62712</td>
+                            </tr>
+                            <!-- 3.4 Canary 8 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.7/android-studio-ide-183.5173923-windows.zip">android-studio-ide-183.5173923-windows.zip</a>
+                                </td>
+                                <td>1142588430 bytes</td>
+                                <td>763c82916e7ead28b021cbb036a3b354924d86c6ee907e981aaee2b0172062f7</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fygtc7zc07j31fe0jytdz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.7/android-studio-ide-183.5173923-windows32.zip">android-studio-ide-183.5173923-windows32.zip</a>
+                                </td>
+                                <td>1142061227 bytes</td>
+                                <td>4a28fdb7a5a0a6efca866acb9eeb310854931bdf4c8858e2a605a84b1dbf31f8</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.7/android-studio-ide-183.5173923-mac.zip">android-studio-ide-183.5173923-mac.dmg</a>
+                                </td>
+                                <td>1071690927 bytes</td>
+                                <td>df1cfac4cadb73bddb6aafc3f8b75de21a2b8fadfe2ffb0d8ac60878a057d9b0</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.7/android-studio-ide-183.5173923-linux.zip">android-studio-ide-183.5173923-linux.zip</a>
+                                </td>
+                                <td>1085626476 bytes</td>
+                                <td>f16e4adf75d8e6a82dc0f30eff414a38d9bc60f7e6db1f66e0b984d51233c92d</td>
+                            </tr>
                             <!-- 3.3 RC 2 -->
                             <tr>
                                 <td rowspan="5">3.3 RC 2</td>
