add android studio 3.4 canary 10 links

--- a/index.html
+++ b/index.html
@@ -426,6 +426,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 Canary 10 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 10</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-windows.zip">android-studio-ide-183.5202479-windows.zip</a>
+                                </td>
+                                <td>1143766149 bytes</td>
+                                <td>efe3a5eddfe52a0d34b83cca04a7a6dd627b16e8b0118021be21ef649079e2d6</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fyz4vugltij31lo0kc0y7.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-windows32.zip">android-studio-ide-183.5202479-windows32.zip</a>
+                                </td>
+                                <td>1143238946 bytes</td>
+                                <td>c77ea0af3632d894308b5610623f043bd889f85b5845bb871923a6710664abbc</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-mac.zip">android-studio-ide-183.5202479-mac.dmg</a>
+                                </td>
+                                <td>1072841586 bytes</td>
+                                <td>04ea56396f66e2e5ad4331de96466afb1513922076a9009439d150b65654ca51</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-linux.zip">android-studio-ide-183.5202479-linux.zip</a>
+                                </td>
+                                <td>1086804197 bytes</td>
+                                <td>8d56bf7c41c2c1e003dac6e1deccb58fc1d63914cd340092039baf63919bf518</td>
+                            </tr>
                             <!-- 3.3 RC 3 -->
                             <tr>
                                 <td rowspan="5">3.3 RC 3</td>
