add android studio 3.4 beta 2/beta 3,3.5 beta 2/beta 3 and 3.3.1 links

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right hide">
+        <div class="ad-float-right">
             <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe" title="全民云计算 爆款云服务器低至 2 折，1 核 1G ¥ 293元/年" onclick="trackOutboundLink('https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe', 'AD-Aliyun-cloud-host-2', 'click');"
                 target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb2m2t9jqj308w0bvt93.jpg" style="height: 209px; width: 130px;">
@@ -216,6 +216,12 @@
             </a>
         </div>
         <div class="ad-float-right">
+                <a href="http://gk.link/a/102a3" title="丁雪丰--平安壹钱包高级架构师、《Spring Boot 实战》和《Spring 攻略》译者，带你玩转 Spring 全家桶，一站通关 Spring、Spring Boot 与 Spring Cloud。" onclick="trackOutboundLink('http://gk.link/a/102a3', 'AD-GeekTime-Play-Spring-Bucket', 'click');"
+                    target="_blank">
+                    <img src="https://ws3.sinaimg.cn/large/006tNc79ly1g03fvn1y10j30u01hdadf.jpg" style="height: 209px; width: 130px;">
+                </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="https://time.geekbang.org/column/intro/142?code=CzZyMVt9D2DFD9KOOd%2FHWWCts5PGI7cAMhV4MJerI6c%3D" title="Android 开发高手课-前微信高级工程师、Tinker 负责人授课，扫码订阅返 8 元" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/142?code=CzZyMVt9D2DFD9KOOd%2FHWWCts5PGI7cAMhV4MJerI6c%3D', 'AD-GeekTime-Android-Dev-Advanced', 'click');"
                 target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fxmbeaw5wnj30eg0n8my9.jpg" style="height: 209px; width: 130px;">
@@ -252,7 +258,7 @@
                 <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="#" title="马老师发红包了，打开支付宝首页搜索“510669218” 立即领红包！天天可领，想花就花！" onclick="trackOutboundLink('alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fxtxyxsjasj30fr0no762.jpg" style="height: 209px; width: 130px;">
             </a>
@@ -426,6 +432,183 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3.1 正式版 -->
+                            <tr>
+                                <td rowspan="5">3.3.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.3.1.0/android-studio-ide-182.5264788-windows.exe">android-studio-ide-182.5264788-windows.exe</a>
+                                </td>
+                                <td>994007584 bytes</td>
+                                <td>a0a83d31981374ad6312b29b3af9913948dca3fdf75e0864c086bcbc3b326641</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1g03glrl0azj31gw0ren4u.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.1.0/android-studio-ide-182.5264788-windows32.zip">android-studio-ide-182.5264788-windows32.zip</a>
+                                </td>
+                                <td>1056816620 bytes</td>
+                                <td>75c7661985a07e02c6ee9d2ef6efc16baaa9e52c5213c3efd281a52844228173</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.3.1.0/android-studio-ide-182.5264788-mac.dmg">android-studio-ide-182.5264788-mac.dmg</a>
+                                </td>
+                                <td>1045673489 bytes</td>
+                                <td>3f2b77e2b2901ccc8dcf866808144f26f1da74b90facbf67198272738f1e169f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.1.0/android-studio-ide-182.5264788-linux.zip">android-studio-ide-182.5264788-linux.zip</a>
+                                </td>
+                                <td>1063407975 bytes</td>
+                                <td>82603100f772baf5b6b54532375ada756b4b2dc11854cabae267cd8bd8c4f039</td>
+                            </tr>
+                            <!-- 3.5 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.2/android-studio-ide-183.5256920-windows.zip">android-studio-ide-183.5256920-windows.zip</a>
+                                </td>
+                                <td>1056724163 bytes</td>
+                                <td>c12e3b1637422c4c4b185c9b68bbedeafa24440fc85a925628c5f0670acdcecc</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1g03gd7j6w0j31gy0kuq8c.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.2/android-studio-ide-183.5256920-windows32.zip">android-studio-ide-183.5256920-windows32.zip</a>
+                                </td>
+                                <td>1056196960 bytes</td>
+                                <td>18058d259a58f666b5a473c422de099802ee32c7795e31dac63427d6d3d597e2</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.2/android-studio-ide-183.5256920-mac.zip">android-studio-ide-183.5256920-mac.dmg</a>
+                                </td>
+                                <td>1048543830 bytes</td>
+                                <td>05ee27759432645948cc514f8a57bfe737a8295fafa400c4cad6de60ac2c477e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.2/android-studio-ide-183.5256920-linux.zip">android-studio-ide-183.5256920-linux.zip</a>
+                                </td>
+                                <td>1063842883 bytes</td>
+                                <td>8bd69789f500151b8e35e88e22f2ef85f23e2dc09a29d907391806d128406d25</td>
+                            </tr>
+                            <!-- 3.4 Beta 3 -->
+                            <tr>
+                                <td rowspan="5">3.4 Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.12/android-studio-ide-183.5256591-windows.zip">android-studio-ide-183.5256591-windows.zip</a>
+                                </td>
+                                <td>1080354832 bytes</td>
+                                <td>e0fe13f27874768264607d862d49a10f401db04ecf95174b20db32e4bb424aea</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1g03gcsfpadj31fg0k479k.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.12/android-studio-ide-183.5256591-windows32.zip">android-studio-ide-183.5256591-windows32.zip</a>
+                                </td>
+                                <td>1079827629 bytes</td>
+                                <td>00103a14c7383bf1cf31be7136782b8fe21d3ece5a4b794b7c94abc911e1eb23</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.12/android-studio-ide-183.5256591-mac.zip">android-studio-ide-183.5256591-mac.dmg</a>
+                                </td>
+                                <td>1073510027 bytes</td>
+                                <td>ea0d56b20e727483295be193687062fe681deddb0d84ebf71b1a506ae62cd41c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.12/android-studio-ide-183.5256591-linux.zip">android-studio-ide-183.5256591-linux.zip</a>
+                                </td>
+                                <td>1087473549 bytes</td>
+                                <td>9c6dbf52469d4b316ee6b4829d0e00fd4cc15af869ffcc87e263bea59e164bf9</td>
+                            </tr>
+                            <!-- 3.5 Canary 2 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.1/android-studio-ide-183.5240547-windows.zip">android-studio-ide-183.5240547-windows.zip</a>
+                                </td>
+                                <td>1053002956 bytes</td>
+                                <td>132e95938335ed4f3e727c6a4b70ff03823038be0eaa6655fa78321480d100e6</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1g03gafguugj31g20k8wjr.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.1/android-studio-ide-183.5240547-windows32.zip">android-studio-ide-183.5240547-windows32.zip</a>
+                                </td>
+                                <td>1052475753 bytes</td>
+                                <td>9b4c7e4bb288bf03b629f2eb70aa8cfaa4dc6973d0650bbbd83af9ce8fe5712b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.1/android-studio-ide-183.5240547-mac.zip">android-studio-ide-183.5240547-mac.dmg</a>
+                                </td>
+                                <td>1046158185 bytes</td>
+                                <td>6849d5498f8323bf6456c5e048b3e433ae737562a3caff032c6607eea2ada5a1</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.1/android-studio-ide-183.5240547-linux.zip">android-studio-ide-183.5240547-linux.zip</a>
+                                </td>
+                                <td>1060121598 bytes</td>
+                                <td>a3bb0753d5ac34715e55f284512ea24f9b67327bbb5d1cf1323171b1d38ba27c</td>
+                            </tr>
+                            <!-- 3.4 Beta 2 -->
+                            <tr>
+                                <td rowspan="5">3.4 Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.11/android-studio-ide-183.5240537-windows.zip">android-studio-ide-183.5240537-windows.zip</a>
+                                </td>
+                                <td>1080316291 bytes</td>
+                                <td>e7ce0ea171c80fc85bdafd96c7d6214c26d5e2402d01460d98be0236cc04c67c</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1g03g7ekfrgj31ga0jeq86.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.11/android-studio-ide-183.5240537-windows32.zip">android-studio-ide-183.5240537-windows32.zip</a>
+                                </td>
+                                <td>1079789088 bytes</td>
+                                <td>c580129eac18a792928bfe7ef7dc1960455ed115bb7808cdb8dbb402caee0d61</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.11/android-studio-ide-183.5240537-mac.zip">android-studio-ide-183.5240537-mac.dmg</a>
+                                </td>
+                                <td>1073471440 bytes</td>
+                                <td>2be6583d252dfc0d182a6f89cd92fbeae1af0dfbe75db554f9b2593f7cfdc541</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.11/android-studio-ide-183.5240537-linux.zip">android-studio-ide-183.5240537-linux.zip</a>
+                                </td>
+                                <td>1087434944 bytes</td>
+                                <td>d99718ad7090329712042c2725dafccf7f0be56e2c7017db9727f129b1576757</td>
+                            </tr>
                             <!-- 3.4 Beta 1 -->
                             <tr>
                                 <td rowspan="5">3.4 Beta 1</td>
@@ -498,7 +681,7 @@
                             </tr>
                             <!-- 3.3.0 正式版 -->
                             <tr>
-                                <td rowspan="5">3.3 正式版</td>
+                                <td rowspan="5">3.3.0 正式版</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Windows</td>
@@ -533,42 +716,6 @@
                                 <td>1059268546 bytes</td>
                                 <td>5cb29b768a4c316649cccc87334e89b1f2db2dc6625e61aff2d3ae68d5632a37</td>
                             </tr>
-                            <!-- 3.4 Canary 10 -->
-                            <tr>
-                                <td rowspan="5">3.4 Canary 10</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-windows.zip">android-studio-ide-183.5202479-windows.zip</a>
-                                </td>
-                                <td>1143766149 bytes</td>
-                                <td>efe3a5eddfe52a0d34b83cca04a7a6dd627b16e8b0118021be21ef649079e2d6</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fyz4vugltij31lo0kc0y7.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-windows32.zip">android-studio-ide-183.5202479-windows32.zip</a>
-                                </td>
-                                <td>1143238946 bytes</td>
-                                <td>c77ea0af3632d894308b5610623f043bd889f85b5845bb871923a6710664abbc</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-mac.zip">android-studio-ide-183.5202479-mac.dmg</a>
-                                </td>
-                                <td>1072841586 bytes</td>
-                                <td>04ea56396f66e2e5ad4331de96466afb1513922076a9009439d150b65654ca51</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.9/android-studio-ide-183.5202479-linux.zip">android-studio-ide-183.5202479-linux.zip</a>
-                                </td>
-                                <td>1086804197 bytes</td>
-                                <td>8d56bf7c41c2c1e003dac6e1deccb58fc1d63914cd340092039baf63919bf518</td>
-                            </tr>
-
                             <!-- 3.2.1 正式版 -->
                             <tr>
                                 <td rowspan="5">3.2.1 正式版</td>
